--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -52,7 +52,8 @@
                 justify-content: center;
                 align-items: center;
                 margin-top: 3rem;
-               position: relative;
+                position: relative;
+
                 span {
                     font-size: 300px;
                     position: absolute;
@@ -68,6 +69,7 @@
                     width: 500px;
                     overflow: hidden;
                     position: relative;
+
                     img {
                         display: block;
                         width: 100%;
@@ -99,22 +101,20 @@
 .popularCategories {
     display: flex;
     flex-direction: column;
-    margin-top: 10rem;
+    margin-top: 6rem;
     gap: 30px;
 
     h2 {
         text-align: center;
         font-family: "Poppins";
         padding: 15px 0 30px 0;
-        &::after {
-            border-bottom: 2px solid green;
-        }
+        font-size: 32px;
     }
 
     .cards-container {
         display: flex;
-        justify-content: space-around;
-        gap: 8px;
+        justify-content: center;
+        gap: 20px;
 
         .card {
             display: flex;
@@ -124,13 +124,33 @@
             gap: 30px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             padding: 40px;
-            // width: 20%;
+            width: 15%;
             background-color: #F8F8F8;
+            transition: .7s;
+            border-radius: 7px;
+
+            &:hover {
+                background-color: #F53F7B;
+
+                i {
+                    color: white;
+                }
+
+                h2 {
+                    color: white;
+
+                }
+
+                span {
+                    background-color: #EB3D76;
+                    color: white;
+                }
+            }
 
             a {
                 display: flex;
                 flex-direction: column;
-                gap: 30px;
+                gap: 20px;
                 color: black;
 
                 i {
@@ -141,6 +161,7 @@
 
                 h2 {
                     font-size: 20px;
+                    font-family: Arial, Helvetica, sans-serif;
                 }
 
                 span {
@@ -149,6 +170,60 @@
                     background-color: #EEEEEE;
                     padding: 10px;
                     border-radius: 30px;
+                    font-family: "Poppins";
+                }
+            }
+        }
+    }
+}
+
+.information-about-site {
+    display: flex;
+    flex-direction: column;
+    margin-top: 7rem;
+
+    h2 {
+        text-align: center;
+        font-family: "Poppins";
+        font-weight: 600;
+    }
+
+    .info-cards {
+        margin-top: 3rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        padding: 20px 10rem;
+
+        .card {
+            background: white;
+            padding: 2.5rem;
+            border: 1px solid #E9E9E9;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            font-family: "Poppins";
+            transition: .6s;
+            &:hover {
+                transform: scale(1.1);
+            }
+
+            span {
+                background-color: #4862C4;
+                color: white;
+                padding: 10px;
+                border-radius: 50px;
+
+            }
+
+            .cards-info {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+                margin-left: 2rem;
+
+                h4 {
+                    font-weight: 600;
                 }
             }
         }
