--- a/src/css/main.css
+++ b/src/css/main.css
@@ -233,4 +233,62 @@ header .register a {
 }
 .information-about-site .info-cards .card .cards-info h4 {
   font-weight: 600;
+}
+
+.artists {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  position: relative;
+  margin: 5rem 2rem;
+  font-family: "Poppins";
+}
+.artists h2 {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 2rem;
+}
+.artists .swiper {
+  width: 100%;
+  height: 100%;
+  margin-top: 3rem;
+}
+.artists .swiper .swiper-wrapper {
+  display: flex;
+  gap: 20px;
+}
+.artists .swiper .swiper-wrapper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.artists .swiper .swiper-wrapper .swiper-slide .image {
+  height: 400px;
+  width: 400px;
+  overflow: hidden;
+  position: relative;
+}
+.artists .swiper .swiper-wrapper .swiper-slide .image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.artists .slider-background-image {
+  margin-top: 3rem;
+  display: flex;
+  height: 40vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.artists .slider-background-image .blackCard {
+  width: 100%;
+  height: 100%;
+  background-color: #1F1F1F;
+  border-right: 2px solid rgb(63, 63, 63);
 }/*# sourceMappingURL=main.css.map */
