--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -204,6 +204,7 @@
             display: flex;
             font-family: "Poppins";
             transition: .6s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -226,6 +227,73 @@
                     font-weight: 600;
                 }
             }
+        }
+    }
+}
+
+.artists {
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    position: relative;
+    margin: 5rem 2rem;
+    font-family: "Poppins";
+
+    h2 {
+        text-align: center;
+        font-size: 30px;
+        margin-bottom: 2rem;
+
+    }
+
+    .swiper {
+        width: 100%;
+        height: 100%;
+        margin-top: 3rem;
+
+        .swiper-wrapper {
+            display: flex;
+            gap: 20px;
+
+            .swiper-slide {
+                text-align: center;
+                font-size: 18px;
+                // background: #fff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .image {
+                    height: 400px;
+                    width: 400px;
+                    overflow: hidden;
+                    position: relative;
+
+                    img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
+
+    .slider-background-image {
+        margin-top: 3rem;
+        display: flex;
+        height: 40vh;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        .blackCard {
+            width: 100%;
+            height: 100%;
+            background-color: #1F1F1F;
+            border-right: 2px solid rgb(63, 63, 63);
         }
     }
 }
