--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./base/reset";
 @import "./layout/header";
+@import "./layout/footer";
 @import "./layout/home";
 @import "./layout/signin";
