--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -4,12 +4,30 @@ footer {
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+
     .footer-image {
         width: 12%;
+
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+    }
+}
+
+@media (max-width: 991px) {
+    footer {
+        margin-bottom: 1.5rem;
+
+        .footer-image {
+            margin-top: 1rem;
+            width: 30%;
+        }
+
+        .footer-text {
+            // font-size: px;
+            border-bottom: 1px solid black;
         }
     }
 }
