--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,4 +2,7 @@
 @import "./layout/header";
 @import "./layout/footer";
 @import "./layout/home";
-@import "./layout/signin";
+@import "./layout/event";
+@import "./layout/eventDetail";
+@import "./layout/login";
+@import "./layout/register";
